fixes issue #2 - profile details overlapping resolved

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 .avatar{
     width:350px;
-    height:430px;
+    height:auto;
   }
+
+#details{
+  margin: 20px;
+  width: 100%;
+}
